--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   <div class="container">
     <img class="car" src="images/f1.svg" alt="car">
   </div>
+  <script src="main.js"></script>
 </body>
 </html>
