Completed use-steer-their-car.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div class="container">
     <img class="car" src="images/f1.svg" alt="car">
   </div>
-  <script src="main.js"></script>
+  <script src="js/data.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
